--- a/20newsgroups.ipynb
+++ b/20newsgroups.ipynb
@@ -12,6 +12,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Lang, Ken. \"Newsweeder: Learning to filter netnews.\" Machine Learning Proceedings 1995. Morgan Kaufmann, 1995. 331-339."
+      ],
+      "metadata": {
+        "id": "Mjg2Bpcpr2_9"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "vD06h3Y6aC2E"
       },
@@ -453,7 +462,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKnYmJfS1iRXsMX6XapPLR",
+      "authorship_tag": "ABX9TyOhG/eg8g8mMdjOi8BrieTn",
       "include_colab_link": true
     },
     "kernelspec": {
